--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>ODIN Create Account</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
 
         <div class="left-panel">
             <div class="logo">
                 <img src="/sign-up-form-practice/images/odin-lined_logo.png" alt="Odin Logo" />
-                ODIN
+                <h1>ODIN</h1>
             </div>
             <div class="bottom">
-                <p>Photo by <span>Halie West</span> on <span>Unsplash</span></p>
+                <p>Photo by <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA" target="_blank">Halie West</a> on <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
             </div>
         </div>
 
@@ -24,47 +25,43 @@
                 <div class="right-head">
                     <p>This is not a real online service! 
                         You know you need something like this in your life to help you realize
-                        your deepest dreams. Sign up now to get started.
+                        your deepest dreams. Sign up <em>now</em> to get started.
                     </p>
-                    <p>You know you want to.</p>
+                    <p class="p-head">You <em>know</em> you want to.</p>
                 </div>
 
                 <div class="inputs">
-                    <form action="" method="post">
-                        <caption>Let's do this!</caption>
 
-                        <div class="form1stRow">
-                            <p>
+                    <form action="" method="post" class="form-inputs">
+                        <p class="p-caption">Let's do this!</p>
+                        <div class="form-inputs-box">
+                            <div class="inputs-left">
                                 <label for="first_name">FIRST NAME</label>
                                 <input type="text" id="first_name">
-                                <label for="last_name">LAST NAME</label>
-                                <input type="text" id="last_name">
-                            </p>
-                        </div>
-
-                        <div class="form2stRow">
-                            <p>
+                                
                                 <label for="email">EMAIL</label>
                                 <input type="email" id="email">
+
+                                <label for="pswd">PASSWORD</label>
+                                <input type="password" id="pass" name="pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+                            </div>
+                            <div class="inputs-right">
+                                <label for="last_name">LAST NAME</label>
+                                <input type="text" id="last_name">
+
                                 <label for="phone_number">PHONE NUMBER</label>
                                 <input type="tel" id="phone_number">
-                            </p>
-                        </div>
 
-                        <div class="form3stRow">
-                            <p>
-                                <label for="pswd">PASSWORD</label>
-                                <input type="password" id="pswd">
                                 <label for="pswd_confirm">CONFIRM PASSWORD</label>
-                                <input type="password" id="pswd_confirm">
-                            </p>
-                        </div>
+                                <input type="password" id="pass-confirm" name="pass-confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
 
-                    <div class="rightFoot">
-                        <button>Create account</button>
-                        <p>Already have an account? <span>Log In</span></p>
-                    </div>
+                            </div>
+                        </div>
                     </form>
+                </div>
+                <div class="right-foot">
+                    <button type="button" class="create-acc">Create account</button>
+                    <p class="p-foot">Already have an account? <a href="" target="_blank">Log In</a>
                 </div>
         </div>
     </div>
